--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,20 @@ body {
   font-family: roboto;
   color: var(--body-color);
 }
+
+.button li {
+  list-style: none;
+  cursor: pointer;
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
+
 /* Логотип */
 .logo {
   color: var(--body-color);
@@ -16,6 +30,7 @@ body {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.1;
+  
 }
 
 .logo-footer {
@@ -37,9 +52,34 @@ body {
   color: var(--primery-white-color);
 }
 
+
+.header {
+  background-color:var(--primery-white-color);
+}
+/* Main nav*/
+.main-nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
 /* Навигация сайта */
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
+
+.auth-nav  {
+  display: flex;
+  margin-left: auto;
+}
+
+
+
 .site-nav li {
   list-style: none;
+  
 }
 
 .site-nav .link {
@@ -51,13 +91,27 @@ body {
   line-height: 1.1;
   letter-spacing: 0.02em;
   cursor: pointer;
+  
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.site-nav .item:not(:last-child) {
+  margin-right: 50px;
+
 }
 
 .site-nav .link:focus,
 .site-nav .link:hover {
   color: var(--accent-color);
 }
+
+
 /* auth-nav */
+
+
+
 .auth-nav .link:focus:focus,
 .auth-nav .link:hover {
   color: var(--accent-color);
@@ -71,20 +125,41 @@ body {
   line-height: 1.1;
   letter-spacing: 0.02em;
   cursor: pointer;
+
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .auth-nav li {
   list-style: none;
 }
+
+.auth-nav .item:not(:last-child) {
+  margin-right: 50px;
+}
+
 /* Основная секция */
-.title {
-  color: #ffffff;
+
+
+.hero .title {
+  color:var(--primery-white-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.3;
   text-align: center;
   letter-spacing: 0.06em;
-}
+  margin-bottom: 40px;
+  max-width: 696px;
+ }
+ 
+ .hero {
+  text-align:center;
+  margin-bottom: 94px;
+  background-color: #2F303A;
+ }
+
+
 
 .section li {
   list-style: none;
@@ -92,28 +167,59 @@ body {
 
 .section h3 {
   color: var(--body-color);
+  margin-bottom: 10px;
 }
+
 
 .section p {
   color: var(--main-color);
 }
 /* button */
 .button button {
+  display: inline-block;
+  text-align:center ;
+  color: var(--primery-white-color);
   font-family: roboto;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
   letter-spacing: 0.06em;
   cursor: pointer;
+  border-radius: 4px;
+  
+  padding: 10px 32px;
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
+.button-hero {
+  margin: 0 auto;
+  display:inline-block;
+  text-align: center;
+
+}
+
+
+
 .button-portf button {
+  display: inline-block;
+  text-align: center;
   font-family: roboto;
+  color: var(--body-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
   letter-spacing: 0.06em;
   cursor: pointer;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
+background: #F5F4FA;;
+}
+
+.button-portf button:focus,
+.button-portf button:hover{
+background: var(--accent-color);
+color: var(--primery-white-color);
 }
 
 .button-portf li {
@@ -121,10 +227,7 @@ body {
   cursor: pointer;
 }
 
-.button li {
-  list-style: none;
-  cursor: pointer;
-}
+
 /* Section team */
 .section-body li {
   list-style: none;
@@ -158,6 +261,7 @@ body {
   font-weight: 400;
   line-height: 1.7;
   letter-spacing: 0.03em;
+  width: 270px;
 }
 .section h2 {
   font-weight: 700;
@@ -165,7 +269,12 @@ body {
   text-align: center;
   line-height: 1.1;
   letter-spacing: 0.03em;
+  margin-top: 93px;
 }
+
+.section-li {
+  display: flex;
+  }
 
 .section-team li {
   list-style: none;
@@ -190,6 +299,14 @@ body {
   font-size: 16px;
   line-height: 1.1;
   letter-spacing: 0.03em;
+}
+
+.section-team li {
+  display: inline-block;
+}
+
+.section-img li{
+  display: inline-block;
 }
 /* footer */
 .address p {
