--- a/css/styles.css
+++ b/css/styles.css
@@ -22,8 +22,8 @@ body {
 }
 
 
-/* Логотип */
-.logo {
+/* logo-header */
+.logo-header {
   color: var(--body-color);
   text-decoration: none;
   font-family: raleway;
@@ -32,57 +32,35 @@ body {
   line-height: 1.1;
   
 }
-
-.logo-footer {
-  color: var(--primery-white-color);
-  text-decoration: none;
-  font-family: raleway;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.1;
-}
-.logo-footer .web {
-  color: var(--accent-color);
-}
-.logo span {
+.logo-header span {
   color: var(--accent-color);
 }
 
-.logo-footer span {
-  color: var(--primery-white-color);
-}
 
 
-.header {
-  background-color:var(--primery-white-color);
-}
-/* Main nav*/
-.main-nav {
+
+
+/* header-navigation*/
+.header-navigation {
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
-
-/* Навигация сайта */
-.site-nav {
+.list-header {
   display: flex;
   margin-left: 93px;
 }
 
-.auth-nav  {
-  display: flex;
-  margin-left: auto;
+.list-header .item:not(:last-child) {
+  margin-right: 50px;
+
+}
+.list-header .link:focus,
+.list-header .link:hover {
+  color: var(--accent-color);
 }
 
-
-
-.site-nav li {
-  list-style: none;
-  
-}
-
-.site-nav .link {
+.list-header .link {
   color: var(--body-color);
   text-decoration: none;
   list-style: none;
@@ -97,27 +75,19 @@ body {
   padding-bottom: 32px;
 }
 
-.site-nav .item:not(:last-child) {
-  margin-right: 50px;
+/* tel-navigaion*/
 
+.tel-navigation  {
+  display: flex;
+  margin-left: auto;
 }
 
-.site-nav .link:focus,
-.site-nav .link:hover {
+.tel-navigation .link:focus:focus,
+.tel-navigation .link:hover {
   color: var(--accent-color);
 }
 
-
-/* auth-nav */
-
-
-
-.auth-nav .link:focus:focus,
-.auth-nav .link:hover {
-  color: var(--accent-color);
-}
-
-.auth-nav .link {
+.tel-navigation .link {
   color: var(--main-color);
   text-decoration: none;
   font-size: 14px;
@@ -130,19 +100,15 @@ body {
   padding-top: 32px;
   padding-bottom: 32px;
 }
-
-.auth-nav li {
+.tel-navigation .item {
   list-style: none;
 }
-
-.auth-nav .item:not(:last-child) {
+.tel-navigation .item:not(:last-child) {
   margin-right: 50px;
 }
 
-/* Основная секция */
-
-
-.hero .title {
+/* section-hero */
+.section-hero .title-hero {
   color:var(--primery-white-color);
   font-weight: 900;
   font-size: 44px;
@@ -151,27 +117,17 @@ body {
   letter-spacing: 0.06em;
   margin-bottom: 40px;
   max-width: 696px;
- }
- 
- .hero {
+}
+.section-hero {
   text-align:center;
   margin-bottom: 94px;
   background-color: #2F303A;
- }
-
-
-
-.section li {
-  list-style: none;
 }
-
-.section h3 {
+.section-hero h3 {
   color: var(--body-color);
   margin-bottom: 10px;
 }
-
-
-.section p {
+.section-hero p {
   color: var(--main-color);
 }
 /* button */
@@ -196,10 +152,130 @@ body {
   margin: 0 auto;
   display:inline-block;
   text-align: center;
+}
+/* Section team */
+.section h3 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+}
+.section p {
+  color: var(--main-color);
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1.8;
+  letter-spacing: 0.03em;
+}
+.section-list {
+  display: flex;
+  }
+  
+  .section-img .list{
+    display: inline-block;
+  }
 
+  
+  
+  .section-team h2 {
+    font-weight: 700;
+    font-size: 36px;
+    text-align: center;
+    line-height: 1.1;
+    letter-spacing: 0.03em;
+  }
+  
+  .section-team h3 {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.1;
+    letter-spacing: 0.03em;
+  }
+  
+  .section-team p {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.1;
+    letter-spacing: 0.03em;
+  }
+  
+  .section-team .list{
+    display: inline-block;
+  }
+  
+
+
+
+
+
+
+
+
+
+  .section h3 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+}
+
+.section p {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  width: 270px;
+}
+.section h2 {
+  font-weight: 700;
+  font-size: 36px;
+  text-align: center;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  margin-top: 93px;
 }
 
 
+
+
+/* footer */
+.address p {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+}
+
+.address .link {
+  color: var(--main-color);
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+}
+
+
+/* logo-footer */
+.logo-footer {
+  color: var(--primery-white-color);
+  text-decoration: none;
+  font-family: raleway;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.1;
+}
+.logo-footer .web {
+  color: var(--accent-color);
+}
+.logo-footer span {
+  color: var(--primery-white-color);
+}
 
 .button-portf button {
   display: inline-block;
@@ -225,106 +301,4 @@ color: var(--primery-white-color);
 .button-portf li {
   list-style: none;
   cursor: pointer;
-}
-
-
-/* Section team */
-.section-body li {
-  list-style: none;
-}
-
-.section-body h3 {
-  font-size: 18px;
-  line-height: 2;
-  font-style: normal;
-  font-weight: 700;
-  letter-spacing: 0.06em;
-}
-
-.section-body p {
-  color: var(--main-color);
-  font-weight: 400;
-  font-style: normal;
-  font-size: 16px;
-  line-height: 1.8;
-  letter-spacing: 0.03em;
-}
-
-.section h3 {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.1;
-  letter-spacing: 0.03em;
-}
-.section p {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
-  width: 270px;
-}
-.section h2 {
-  font-weight: 700;
-  font-size: 36px;
-  text-align: center;
-  line-height: 1.1;
-  letter-spacing: 0.03em;
-  margin-top: 93px;
-}
-
-.section-li {
-  display: flex;
-  }
-
-.section-team li {
-  list-style: none;
-}
-.section-team h2 {
-  font-weight: 700;
-  font-size: 36px;
-  text-align: center;
-  line-height: 1.1;
-  letter-spacing: 0.03em;
-}
-
-.section-team h3 {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.1;
-  letter-spacing: 0.03em;
-}
-
-.section-team p {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.1;
-  letter-spacing: 0.03em;
-}
-
-.section-team li {
-  display: inline-block;
-}
-
-.section-img li{
-  display: inline-block;
-}
-/* footer */
-.address p {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
-}
-
-.address .link {
-  color: var(--main-color);
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 400;
-  text-decoration: none;
-  font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
 }
