--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,12 @@ body {
   margin: 0 auto;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 
 /* logo-header */
 .logo-header {
@@ -100,9 +106,7 @@ body {
   padding-top: 32px;
   padding-bottom: 32px;
 }
-.tel-navigation .item {
-  list-style: none;
-}
+
 .tel-navigation .item:not(:last-child) {
   margin-right: 50px;
 }
@@ -117,6 +121,12 @@ body {
   letter-spacing: 0.06em;
   margin-bottom: 40px;
   max-width: 696px;
+
+  display: inline-block;
+  align-items: center;
+  margin-top: 200px;
+  margin-bottom: 30px;
+  
 }
 .section-hero {
   text-align:center;
@@ -142,6 +152,7 @@ body {
   letter-spacing: 0.06em;
   cursor: pointer;
   border-radius: 4px;
+  margin-bottom: 200px;
   
   padding: 10px 32px;
   background: var(--accent-color);
@@ -154,6 +165,8 @@ body {
   text-align: center;
 }
 /* Section team */
+
+
 .section h3 {
   font-weight: 700;
   font-size: 14px;
@@ -167,23 +180,36 @@ body {
   font-size: 16px;
   line-height: 1.8;
   letter-spacing: 0.03em;
+  margin-right: 30px;
 }
+
+.section h2 {
+  font-weight: 700;
+  font-size: 36px;
+  text-align: center;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  margin-top: 93px;
+  margin-bottom: 50px;
+}
+
 .section-list {
   display: flex;
   }
   
   .section-img .list{
-    display: inline-block;
+    display: flex;
   }
 
-  
-  
+/* section-team*/
   .section-team h2 {
     font-weight: 700;
     font-size: 36px;
     text-align: center;
     line-height: 1.1;
     letter-spacing: 0.03em;
+    margin-bottom: 50px;
+    margin-top: 188px;
   }
   
   .section-team h3 {
@@ -198,48 +224,39 @@ body {
     font-size: 16px;
     line-height: 1.1;
     letter-spacing: 0.03em;
+    padding-bottom: 124px;
   }
   
   .section-team .list{
-    display: inline-block;
+    display: flex;
   }
   
 
 
+  /* footer */
+.container-footer{
+  background-color: #2F303A;
+}
 
-
-
-
-
-
-
-  .section h3 {
+.logo-footer {
+  color: var(--primery-white-color);
+  text-decoration: none;
+  font-family: raleway;
   font-weight: 700;
-  font-size: 14px;
+  font-size: 26px;
   line-height: 1.1;
-  letter-spacing: 0.03em;
+ 
+  display: block;
+  padding-top: 60px;
 }
 
-.section p {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
-  width: 270px;
+.logo-footer .web {
+  color: var(--accent-color);
 }
-.section h2 {
-  font-weight: 700;
-  font-size: 36px;
-  text-align: center;
-  line-height: 1.1;
-  letter-spacing: 0.03em;
-  margin-top: 93px;
+.logo-footer span {
+  color: var(--primery-white-color);
 }
 
-
-
-
-/* footer */
 .address p {
   font-family: Roboto;
   font-style: normal;
@@ -247,8 +264,8 @@ body {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
+  padding-top: 20px;
 }
-
 .address .link {
   color: var(--main-color);
   font-family: Roboto;
@@ -258,24 +275,15 @@ body {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
+  padding-top: 9px;
+}
+
+.address p{
+  color: var(--primery-white-color);
 }
 
 
-/* logo-footer */
-.logo-footer {
-  color: var(--primery-white-color);
-  text-decoration: none;
-  font-family: raleway;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.1;
-}
-.logo-footer .web {
-  color: var(--accent-color);
-}
-.logo-footer span {
-  color: var(--primery-white-color);
-}
+
 
 .button-portf button {
   display: inline-block;
@@ -302,3 +310,22 @@ color: var(--primery-white-color);
   list-style: none;
   cursor: pointer;
 }
+
+
+
+/*
+.section h3 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+}
+
+.section p {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  width: 270px;
+}
+*/
