--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,10 @@ img {
 
 
 /* header-navigation*/
+.header{
+  border-bottom: 1px solid #ECECEC;
+}
+
 .header-navigation {
   display: flex;
   align-items: center;
@@ -330,6 +334,10 @@ justify-content: center;
 margin-bottom: 50px;
 }
 
+.button-portfolio {
+margin-top: 94px;
+}
+
 
 .item-button button{
   text-align: center;
@@ -357,17 +365,27 @@ color: var(--primery-white-color);
   flex-wrap: wrap;
 }
 
+
+
 .list-image h3{
-  margin-top: 20px;
+  padding-top: 20px;
+  padding-left: 24px;
 }
 
 .list-image p{
-  margin-top: 4px;
+  padding-top: 4px;
+  padding-left: 24px;
 }
 
 .list-image .item{
   width: 370px;
   margin-right: 30px;
+  border: 1px solid #EEEEEE;
+  margin-bottom: 30px;
+}
+
+.list-image .item:nth-last-child(-n+3){
+  margin-bottom: 0px;
 }
 
 .list-image .item:nth-child(3n+3){
@@ -385,6 +403,7 @@ color: var(--primery-white-color);
   line-height: 1.7;
   letter-spacing: 0.03em;
   width: 270px;
-  margin-bottom: 50px;
+  padding-bottom: 20px;
   color: var(--main-color);
+  
 }
