--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,15 @@ img {
 }
 
 /* section-hero */
+.section-hero {
+  text-align:center;
+  padding-bottom: 210px;
+  padding-top: 200px;
+  background-color: #2F303A;
+}
+
+
+
 .section-hero .title-hero {
   color:var(--primery-white-color);
   font-weight: 900;
@@ -128,15 +137,11 @@ img {
 
   display: inline-block;
   align-items: center;
-  margin-top: 200px;
   margin-bottom: 30px;
+  text-align: center;
   
 }
-.section-hero {
-  text-align:center;
-  margin-bottom: 94px;
-  background-color: #2F303A;
-}
+
 .section-hero h3 {
   color: var(--body-color);
   margin-bottom: 10px;
@@ -145,8 +150,8 @@ img {
   color: var(--main-color);
 }
 /* button */
-.button button {
-  display: inline-block;
+.button-hero {
+  display: block;
   text-align:center ;
   color: var(--primery-white-color);
   font-family: roboto;
@@ -156,7 +161,6 @@ img {
   letter-spacing: 0.06em;
   cursor: pointer;
   border-radius: 4px;
-  margin-bottom: 200px;
   border-style: none;
   
   padding: 10px 32px;
@@ -166,50 +170,52 @@ img {
 
 .button-hero {
   margin: 0 auto;
-  display:inline-block;
   text-align: center;
 }
 /* Section team */
-
-
-.section h3 {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.1;
-  letter-spacing: 0.03em;
-}
-.section p {
-  color: var(--main-color);
-  font-weight: 400;
-  font-style: normal;
-  font-size: 16px;
-  line-height: 1.8;
-  letter-spacing: 0.03em;
-  margin-right: 30px;
+.section-aside{
+  padding-top: 94px;
 }
 
-.section h2 {
-  font-weight: 700;
-  font-size: 36px;
-  text-align: center;
-  line-height: 1.1;
-  letter-spacing: 0.03em;
-  margin-top: 93px;
-  margin-bottom: 50px;
-}
-
-.section h3 {
+.section-list h3 {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.03em;
   margin-bottom: 10px;
 }
+.section-list p {
+  color: var(--main-color);
+  font-weight: 400;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.8;
+  letter-spacing: 0.03em;
+}
+
+
+.section-list li{
+  margin-right: 30px;
+}
+
+.section-list li:last-child{
+  margin-right: 0px;
+}
 
 .section-list {
   display: flex;
   }
   
+  .section-img h2 {
+    font-weight: 700;
+    font-size: 36px;
+    text-align: center;
+    line-height: 1.1;
+    letter-spacing: 0.03em;
+    padding-top: 93px;
+    margin-bottom: 50px;
+  }
+
   .section-img .list{
     display: flex;
     align-items: center;
@@ -223,9 +229,16 @@ img {
   margin-right: 0px;
 }
 
-
+.section-img{
+  padding-bottom: 94px;
+}
 
 /* section-team*/
+
+.section-team{
+  padding-top: 94px;
+}
+
   .section-team h2 {
     font-weight: 700;
     font-size: 36px;
@@ -233,7 +246,6 @@ img {
     line-height: 1.1;
     letter-spacing: 0.03em;
     margin-bottom: 50px;
-    padding-top: 188px;
   }
   
   .section-team h3 {
@@ -264,6 +276,7 @@ img {
 
   .section-team .item{
     margin-right: 30px;
+    box-sizing: border-box;
   }
   .section-team .item:last-child{
     margin-right: 0px;
@@ -274,6 +287,8 @@ img {
   /* footer */
 .section-footer {
   background-color: #2F303A;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .logo-footer {
@@ -284,7 +299,8 @@ img {
   font-size: 26px;
   line-height: 1.1;
   display: block;
-  padding-top: 60px;
+  margin-bottom: 20px;
+  
 }
 
 .logo-footer .web {
@@ -301,10 +317,10 @@ img {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
-  padding-top: 20px;
+  
 }
 .address .link {
-  color: var(--main-color);
+  color: #FFFFFF99;
   font-family: Roboto;
   font-style: normal;
   font-weight: 400;
@@ -312,7 +328,7 @@ img {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
-  padding-top: 9px;
+  
 }
 
 
@@ -322,7 +338,6 @@ img {
 }
 .address .link-tel{
   display: block;
-  padding-bottom: 60px;
 }
 
 
@@ -331,11 +346,11 @@ img {
 .list-portfolio{
 display: flex;
 justify-content: center;
-margin-bottom: 50px;
+padding-bottom: 50px;
 }
 
 .button-portfolio {
-margin-top: 94px;
+padding-top: 94px;
 }
 
 
@@ -353,6 +368,7 @@ margin-top: 94px;
 border-style: none;
 color: var(--body-color);
 margin-right: 8px;
+padding: 6px 22px;
 }
 .item-button button:focus,
 .item-button button:hover{
@@ -365,17 +381,6 @@ color: var(--primery-white-color);
   flex-wrap: wrap;
 }
 
-
-
-.list-image h3{
-  padding-top: 20px;
-  padding-left: 24px;
-}
-
-.list-image p{
-  padding-top: 4px;
-  padding-left: 24px;
-}
 
 .list-image .item{
   width: 370px;
@@ -403,7 +408,10 @@ color: var(--primery-white-color);
   line-height: 1.7;
   letter-spacing: 0.03em;
   width: 270px;
-  padding-bottom: 20px;
   color: var(--main-color);
-  
+  margin-top: 4px;
+}
+
+.subtitle {
+  padding: 20px 24px;
 }
